2026.03.04: Update dependencies